--- a/style.css
+++ b/style.css
@@ -18,129 +18,54 @@ h2{
     font-size: 16px;
 }
 .navigation .container{
+    display:flex;
+    border-bottom: solid 3px #cdc7b8; 
+  
+}
+.navigation .container a{
+    text-decoration: none;
+    display: block;
+    color: black;
+}
+.navigation .container .bi{
+    color: red;
+}
+
+/*
+.navigation .container{
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
     align-items: center;
+    border-bottom: solid 3px #cdc7b8;
+    margin-top: 15px;
     background-color:#cdc7b8;
 }
 .navigation .container img{
     border-radius: 50%;
+    margin: 0 20px 20px 0;
     
 }
 .navigation .container a{
+    display: block;
     align-items: center;
     text-decoration: none;
     color: #000;
     margin-top: -20px;
-    
-    
-}
-
-
-
-
-
-
-
-
+}*/
 footer{
     text-align: center;
-    background-color: #f5f2f3;
-
+   /* border-bottom: solid 3px #cdc7b8;*/
 }
 
-
-@media screen and (min-width:600px){
-
-}
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-/*
-
-.navbar{
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: center;
-    align-items: center;
-    border-bottom: solid 5px #4D3325;
-    padding-bottom: 20px;
-    margin-top: 20px;
-    
-}.navbar a{
-    text-decoration: none;
-    color: #000;
-    margin-right: 10px;
-    border-bottom: solid 1px #000;
-    padding-bottom: 5px;
-    font-size: 20px;
-    
-}
-h1{
-    color: #4D3325;
-    font-family: 'Playfair Display', sans-serif;
-    text-align: center;
-}
-/*.sectionprincipale{
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-}
-.sectionprincipale .cards{
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: center;
-    margin-top: 5px;
-}
-.cards .left{
-    flex: 0 0 30%;
-    padding: 20px;
-   /* background-color: black;
-    color: #000;
-}
-.cards.right{
-    flex: 0 0 70%;
-    height: 300px;
-    width: 400px;
-}
-.cards.right img{
-    height: 300px;
-    width: 400px;
-}
-
-@media screen and (max-width:680px){
-
-    h1{
-        font-size: 15px; 
+@media screen and (min-width:800px){
+    .container{
+        width: 900px;
+        margin: 0 auto;
     }
-    p{
-        font-size: 15px;
+    footer .container{
+        text-align: center;
+        border-top: solid 3px #cdc7b8;
     }
-
+    
 }
